# PySlope

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Procfile  README.md  demo.ipynb  graphs.ipynb  manage.py  pySlope.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  slope.py  test.html  utilities.py  v1.html  version.py
.github/workflows/: ci.yaml  pre-commit.yaml  release.yaml
django application/engineering/: manage.py
docs/source/: conf.py  docstrings.rst  examples.rst  index.rst  installation.rst
engineering/: asgi.py  settings.py  urls.py  wsgi.py
graphs/: sandstone_fill_5m_1_1.html  sandstone_fill_FOS_1.25_for_loads_and_angles.html
pySlope/: __init__.py  demo.ipynb  graphs.ipynb  pySlope.py  utilities.py  version.py
pySlope/examples/: readme_example.ipynb
pySlope/tests/: slide_test.slim
pyslope/: __init__.py  _version.py  cli.py  data_validation.py  demo.ipynb  graphs.ipynb  pySlope.py  pyslope.py  speed_benchmark.py  typography.css  utilities.py
pyslope/docs/: conf.py  docstrings.rst  examples.rst  installation.rst  requirements_docs.txt
pyslope/examples/: readme_example.ipynb  search.xlsx  slices.xlsx  summary_results.xlsx  validation.ipynb
pyslope/paper/: paper.md
pyslope/tests/: test_slope.py  test_validation_examples.py
slope/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py  widgets.py
slope/migrations/: 0001_initial.py  0002_auto_20220328_2237.py  0003_auto_20220328_2247.py  0004_auto_20220329_1844.py  0005_auto_20220411_0843.py  0006_auto_20220411_0851.py  0007_auto_20220411_0856.py  0008_materialmodel_color.py  0009_auto_20220415_1142.py  0010_alter_materialmodel_name.py  (+4 more)
ss/: shapes.ipynb  slope2.py  slopess.py
tests/: unittests.py
(+39 files in other folders)
