# Inside of setup.cfg
[metadata]
description-file = README.md

# versioneer
[versioneer]
VCS = git
style = pep440
versionfile_source = pyslope/_version.py
versionfile_build = pyslope/_version.py
tag_prefix = 
parentdir_prefix = 

[tool:pytest]
addopts = --doctest-modules --verbose --cov=./
testpaths = pyslope/

[flake8]
exclude = __init__.py, versioneer.py, _version.py
max-line-length = 120